--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'MesloLGS NF';
-  src: url('./fonts/woff2/MesloLGS\ NF\ Italic.woff2') format('woff2');
+  src: url('https://greglamb.github.io/MesloLGSNF-web-fonts/fonts/woff2/MesloLGS\ NF\ Italic.woff2') format('woff2');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'MesloLGS NF';
-  src: url('./fonts/woff2/MesloLGS\ NF\ Bold.woff2') format('woff2');
+  src: url('https://greglamb.github.io/MesloLGSNF-web-fonts/fonts/woff2/MesloLGS\ NF\ Bold.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'MesloLGS NF';
-  src: url('./fonts/woff2/MesloLGS\ NF\ Bold\ Italic.woff2') format('woff2');
+  src: url('https://greglamb.github.io/MesloLGSNF-web-fonts/fonts/woff2/MesloLGS\ NF\ Bold\ Italic.woff2') format('woff2');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: 'MesloLGS NF';
-  src: url('./fonts/woff2/MesloLGS\ NF\ Regular.woff2') format('woff2');
+  src: url('https://greglamb.github.io/MesloLGSNF-web-fonts/fonts/woff2/MesloLGS\ NF\ Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
